--- a/게시판_로그인_회원가입/Board-main/build.gradle
+++ b/게시판_로그인_회원가입/Board-main/build.gradle
@@ -37,6 +37,8 @@ dependencies {
 	implementation 'com.mysql:mysql-connector-j:8.3.0'//mysql 드라이버
 	implementation 'jakarta.validation:jakarta.validation-api:3.0.2'
 	implementation 'org.hibernate.validator:hibernate-validator:8.0.1.Final'
+	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
+	implementation 'org.springframework.boot:spring-boot-starter-security'
 
 
 	// 스프링 시큐리티 웹 관련
